@@ -1004,12 +1004,14 @@ public class NNThroughputBenchmark {
     }
 
     void generateInputs(int[] ignore) throws IOException {
+      final FSNamesystem namesystem = nameNode.getNamesystem();
+
       // start data-nodes; create a bunch of files; generate block reports.
       blockReportObject.generateInputs(ignore);
       // stop replication monitor
-      nameNode.namesystem.replthread.interrupt();
+      namesystem.replthread.interrupt();
       try {
-        nameNode.namesystem.replthread.join();
+        namesystem.replthread.join();
       } catch(InterruptedException ei) {
         return;
       }
@@ -1021,7 +1023,7 @@ public class NNThroughputBenchmark {
       // decommission data-nodes
       decommissionNodes();
       // set node replication limit
-      nameNode.namesystem.setNodeReplicationLimit(nodeReplicationLimit);
+      namesystem.setNodeReplicationLimit(nodeReplicationLimit);
     }
 
     private void decommissionNodes() throws IOException {
@@ -1052,7 +1054,7 @@ public class NNThroughputBenchmark {
       assert daemonId < numThreads : "Wrong daemonId.";
       long start = System.currentTimeMillis();
       // compute data-node work
-      int work = nameNode.namesystem.computeDatanodeWork();
+      int work = nameNode.getNamesystem().computeDatanodeWork();
       long end = System.currentTimeMillis();
       numPendingBlocks += work;
       if(work == 0)
